# ranking_divergence

./: README.md  pyproject.toml
docs/: hacking_ppl.md  openwebtext_analysis_plan.md  ranking_summary_notes.md
examples/: evaluate_gpt2_openwebtext.py  openwebtext_analysis.py
outputs/openwebtext_analysis/20260616T203608Z/tables/: metrics.md
outputs/openwebtext_analysis/smoke/tables/: metrics.md
scripts/: openwebtext_full.sh  openwebtext_smoke.sh
src/ranking_divergence/: __init__.py  baselines.py  data.py  metrics.py
tests/: test_openwebtext_analysis_cli.py  test_rank.py
